# athrill-device

./: .gitignore  .gitmodules  MANIFEST  Makefile.env  README.md
.github/workflows/: packagebuild.yml
demo/gps/v850/: Makefile  device_config.txt  main.c  memory.txt  serial_rx.txt  start.S  test_reg.h  v850esfk3.ld  vector.S
demo/sample/v850/: device_config.txt  main.c  memory.txt
device/: Makefile.env
device/ev3com/: CMakeLists.txt  Makefile  ev3com.c  ev3com.h  ev3com_mmap.c  ev3com_private.h  ev3com_udp.c  ev3serial.c  ev3serial.h
device/ev3com/config/: device_config.txt  device_config_mmap.txt  memory.txt  memory_mmap.txt
device/ev3com/grpc/: CMakeLists.txt  Makefile  python_proxy.bash
device/ev3com/grpc/client/cpp/: ev3com_base.h  ev3com_format.h  ev3com_offset.h  ev3packet.cc  ev3packet.h  ev3packet_actuator_test.cc  ev3packet_sensor_test.cc  sample_client.cc  serial_client.cc  serial_client.h  serial_client_main.cc
device/ev3com/grpc/client/ruby/: sample_client.rb  serial_client.rb
device/ev3com/grpc/lib/cpp/proto/: sample.grpc.pb.cc  sample.grpc.pb.h
device/ev3com/grpc/lib/python/: codegen.py  sample_pb2.py
device/ev3com/grpc/lib/ruby/: sample_services_pb.rb  serial_pb.rb  serial_services_pb.rb
device/ev3com/grpc/proto/: sample.proto  serial.proto
device/ev3com/grpc/server/csharp/: BtSerial.csproj  MemoryFifo.cs  Program.cs  SerialServer.cs  VirtualBluetoothSerial.cs
device/ev3com/grpc/server/python/: sample_server.py
device/ev3com/grpc/server/ruby/: serial_server.rb
device/gps/: gps.c  gps.h
device/hakoniwa/: CMakeLists.txt
device/hakoniwa/io/: hakoniwa_device_io.h
device/hakoniwa/protobuf/: CMakeLists.txt  hakoniwa_packet.cc  hakoniwa_packet.h
device/hakoniwa/run/: hakoniwa_device_run.c  hakoniwa_device_run.h
device/hakopdu/: CMakeLists.txt  hakoniwa_device.c
device/hakopdu/io/: hakoniwa_device_io.h
device/hakopdu/io/plugins/ev3/: hakoniwa_device_io.c  hakoniwa_ev3.h
device/hakopdu/io/plugins/ev3/packet/: ev3com_offset.h  ev3packet.c  ev3packet.h  pdu_primitive_ctypes.h
device/hakopdu/io/plugins/ev3/packet/ev3_msgs/: pdu_ctype_EV3PduActuator.h  pdu_ctype_EV3PduSensor.h  pdu_ctype_Ev3PduActuatorHeader.h  pdu_ctype_Ev3PduColorSensor.h  pdu_ctype_Ev3PduMotor.h  pdu_ctype_Ev3PduSensorHeader.h  pdu_ctype_Ev3PduTouchSensor.h
device/hakopdu/run/: hakoniwa_device_run.c
device/hakosample/: CMakeLists.txt  hakoniwa_device.c
device/hakosample/io/: hakoniwa_device_io.c  hakoniwa_device_io.h
device/hakosample/run/: hakoniwa_device_run.c  hakoniwa_device_run.h
device/hakotime/: CMakeLists.txt  build.bash
device/hakotime/io/: hakoniwa_device_io.c
device/hakotime/run/: hakoniwa_device_run.c  hakoniwa_device_run.h
device/lib/include/: athrill_libs.h  athrill_types.h
device/lib/src/: athrill_priv.c  athrill_priv.h
device/ros2dev/: CMakeLists.txt  build.bash  ros2dev.c  rosdev.c
device/ros2dev/include/: ros_dev.h  ros_dev_primitive_types.h
device/ros2dev/include/private/: ros_dev_reg.h
device/ros2dev/ros2_ws/athrill_device/: CMakeLists.txt  package.xml
device/ros2dev/ros2_ws/athrill_device/include/: ros_device.h
device/ros2dev/ros2_ws/athrill_device/src/: athrill_device.cpp  ros_device.cpp  ros_device_cppgen.hpp
device/sample/: CMakeLists.txt  Makefile  greeting.cc  greeting.h  sample_device.c
device/sample/grpc/: CMakeLists.txt  Makefile  ruby_proxy.bash
device/sample/grpc/client/cpp/: sample_client.cc  sample_client.h
device/sample/grpc/elixir/: .gitignore  Dockerfile.elixir  README.md  create-image-elixir.bash  run-athrill.bash
device/sample/grpc/lib/cpp/proto/: sample.pb.cc  sample.pb.h
device/sample/grpc/lib/python/: sample_pb2_grpc.py
device/sample/grpc/lib/ruby/: sample_pb.rb
device/sample/grpc/proto/: sample.proto
device/sample/grpc/server/ruby/: sample_server.rb
device/sample/ros2/: Dockerfile  attach.bash  create-image.bash  run.bash
device/sample/ros2/workspace/: create-pkg.bash
device/sample/ros2/workspace/src/hello_world/: CMakeLists.txt  package.xml
device/sample/ros2/workspace/src/hello_world/src/: sample_client.cpp
device/sample/ros2/workspace/src/hello_world/test/: CMakeLists.txt  gtest.cmake  test.cpp
docker/rh850/: Dockerfile  attach.bash  create-image.bash  run.bash
docker/v850/: Dockerfile.athrill  create-image-athrill.bash  install-athrill.bash  run-athrill.bash
drivers/common/: driver_osdep.h
drivers/rh850/ros2dev/common/: ros_dev_com.c  ros_dev_com.h
drivers/rh850/ros2dev/sample/: Makefile  memory.txt  sample1.arxml  sample1.c  sample1.h
drivers/rh850/ros2dev/turtlebot3/: Makefile  device_config.txt  hakoniwa_proxy.bash  memory.txt  proxy_param.json  sample1.c  start_athrill.bash
drivers/serial/: athrill_serial_driver.c  athrill_serial_driver.h
gps/: Makefile
sample/: Makefile  sample_device.c
